--- a/static/styles.css
+++ b/static/styles.css
@@ -71,4 +71,33 @@ footer {
     background-color: #282828;
     padding: 10px;
     text-align: center;
+    box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.2);
+}
+
+#audio-player-container {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+#audio-player {
+    width: 100%;
+    height: 50px;
+    border: none;
+    background-color: #1db954;
+    color: white;
+}
+
+#audio-player::-webkit-media-controls-panel {
+    background-color: #1db954;
+    color: white;
+}
+
+#audio-player::-webkit-media-controls-play-button,
+#audio-player::-webkit-media-controls-pause-button,
+#audio-player::-webkit-media-controls-timeline,
+#audio-player::-webkit-media-controls-current-time-display,
+#audio-player::-webkit-media-controls-time-remaining-display,
+#audio-player::-webkit-media-controls-volume-slider {
+    color: white;
 }
