--- a/static/styles.css
+++ b/static/styles.css
@@ -30,6 +30,17 @@ section {
     margin-bottom: 20px;
 }
 
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #282828;
+    padding: 10px;
+    text-align: center;
+
+}
+
 form {
     display: flex;
     flex-direction: column;
@@ -107,9 +118,9 @@ button:hover {
 
 #audio-controls {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    width: 200px;
+    gap: 10px;
+    margin-right: 10px;
 }
 
 #audio-controls button {
@@ -126,4 +137,46 @@ button:hover {
 
 #audio-controls span {
     font-size: 12px;
+}
+
+.slidecontainer {
+    width: 100%;
+    padding: 10px 0;
+}
+
+.slider {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 15px;
+    background: linear-gradient(to right, #1ed760 0%, #1ed760 var(--value), #121212 var(--value), #121212 100%);
+    border-radius: 7.5px;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: opacity .2s;
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
 }
