--- a/static/styles.css
+++ b/static/styles.css
@@ -91,7 +91,6 @@ button:hover {
     background-color: #282828;
     border-radius: 5px;
     padding: 10px;
-    margin-top: 10px;
     width: 100%;
 }
 
@@ -120,7 +119,9 @@ button:hover {
 #audio-controls {
     display: flex;
     align-items: center;
-    gap: 10px;
+    padding: 10px;
+    background-color: #282828;
+    border-radius: 5px;
     margin-right: 10px;
 }
 
