--- a/static/styles.css
+++ b/static/styles.css
@@ -88,9 +88,9 @@ button:hover {
 }
 
 .music-item img.cover-art {
-    width: 50px;
-    height: 50px;
-    border-radius: 5px;
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
     object-fit: cover;
 }
 
@@ -123,10 +123,11 @@ button:hover {
 }
 
 #cover-art {
-    width: 60px;
-    height: 60px;
-    border-radius: 5px;
+    width: 250px;
+    height: 250px;
+    border-radius: 25px;
     margin-right: 10px;
+    margin-bottom: 10px;
 }
 
 #track-info {
