--- a/static/styles.css
+++ b/static/styles.css
@@ -90,7 +90,7 @@ button:hover {
 .music-item img.cover-art {
     width: 80px;
     height: 80px;
-    border-radius: 10px;
+    border-radius: 8px;
     object-fit: cover;
 }
 
@@ -110,6 +110,17 @@ button:hover {
 
 .music-item:hover {
     background-color: #3e3e3e;
+}
+
+.music-item .hifi-tag {
+    position: relative;
+    bottom: 5px;
+    right: 5px;
+    background-color: #000;
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 12px;
 }
 
 #now-playing {
