--- a/static/styles.css
+++ b/static/styles.css
@@ -77,6 +77,7 @@ button:hover {
 }
 
 .music-item {
+    position: relative;
     background-color: #282828;
     padding: 15px;
     border-radius: 10px;
@@ -113,7 +114,7 @@ button:hover {
 }
 
 .music-item .hifi-tag {
-    position: relative;
+    position: absolute;
     bottom: 5px;
     right: 5px;
     background-color: #000;
