--- a/static/styles.css
+++ b/static/styles.css
@@ -57,13 +57,13 @@ button {
 }
 
 button {
-    background-color: #1db954;
+    background-color: var(--art-color);
     color: #fff;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #1ed760;
+    background-color: var(--art-color);
 }
 
 #music-list-section {
@@ -78,7 +78,7 @@ button:hover {
 
 .music-item {
     position: relative;
-    background-image: linear-gradient(to right, var(--art-color), #282828);
+    background-image: linear-gradient(180deg, var(--art-color), #282828);
     padding: 15px;
     border-radius: 10px;
     text-align: center;
@@ -86,6 +86,7 @@ button:hover {
     display: flex;
     align-items: center;
     gap: 15px;
+    transition: transform 0.2s, background-image 0.2s;
 }
 
 .music-item img.cover-art {
@@ -110,7 +111,8 @@ button:hover {
 }
 
 .music-item:hover {
-    background-color: #3e3e3e;
+    transform: scale(1.05);
+    background-image: linear-gradient(180deg, #282828, var(--art-color));
 }
 
 .music-item .hifi-tag {
@@ -128,7 +130,7 @@ button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #282828;
+    background-image: linear-gradient(180deg, var(--art-color), #282828);
     border-radius: 5px;
     padding: 10px;
     width: 100%;
@@ -146,7 +148,7 @@ button:hover {
     height: 300px;
     border-radius: 25px;
 
-    box-shadow: 0 0 8px 0 var(--art-color);
+    box-shadow: 0 0 16px 8px var(--art-color)
 }
 
 #track-info {
@@ -179,7 +181,7 @@ button:hover {
 
 #audio-controls button {
     background: none;
-    color: #1db954;
+    color: var(--art-color);
     font-size: 24px;
     border: none;
     cursor: pointer;
@@ -213,7 +215,7 @@ button:hover {
     width: 100%;
     height: 6px;
     margin: 0px;
-    background: linear-gradient(to right, #1ed760 0%, #1ed760 var(--value), #121212 var(--value), #121212 100%);
+    background: linear-gradient(to right, var(--art-color) 0%, var(--art-color) var(--value), #121212 var(--value), #121212 100%);
     outline: none;
     opacity: 1;
     -webkit-transition: opacity .1s;
@@ -226,7 +228,7 @@ button:hover {
     opacity: 0;
     width: 10px;
     height: 10px;
-    background: #1ed760;
+    background: var(--art-color);
     border: none;
     border-radius: 10px;
     transition: opacity .1s;
@@ -236,7 +238,7 @@ button:hover {
     opacity: 0;
     width: 10px;
     height: 10px;
-    background: #1ed760;
+    background: var(--art-color);
     border: none;
     border-radius: 10px;
     transition: opacity .1s;
@@ -245,7 +247,7 @@ button:hover {
 .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #1db954;
+    border-top: 16px solid var(--art-color);
     width: 60px;
     height: 60px;
     animation: spin 2s linear infinite;
