--- a/static/styles.css
+++ b/static/styles.css
@@ -212,7 +212,7 @@ button:hover {
     width: 100%;
     height: 6px;
     margin: 0px;
-    background: linear-gradient(to right, #fff 0%, #fff var(--value), #12121200 var(--value), #12121200 100%);
+    background: linear-gradient(to right, var(--art-color) 0%, var(--art-color) var(--value), #000 var(--value), #000 100%);
     outline: none;
     opacity: 1;
     -webkit-transition: opacity .1s;
