--- a/static/styles.css
+++ b/static/styles.css
@@ -244,7 +244,7 @@ button:hover {
 .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid var(--art-color);
+    border-top: 16px solid #000;
     width: 60px;
     height: 60px;
     animation: spin 2s linear infinite;
