--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Urbanist", Arial, sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
     background-color: #121212;
     color: #fff;
     margin: 0;
@@ -79,6 +84,7 @@ button:hover {
 .music-item {
     position: relative;
     background-image: linear-gradient(180deg, var(--art-color), #282828);
+    background-position: 0px;
     padding: 15px;
     border-radius: 10px;
     text-align: center;
@@ -107,12 +113,13 @@ button:hover {
 
 .music-item-artist {
     font-size: 14px;
-    color: #b3b3b3;
+    color: #fff;
+    opacity: 0.7;
 }
 
 .music-item:hover {
     transform: scale(1.05);
-    background-position: -100px;
+    background-position: -300px;
 }
 
 .music-item .hifi-tag {
