--- a/static/styles.css
+++ b/static/styles.css
@@ -83,8 +83,9 @@ button:hover {
 
 .music-item {
     position: relative;
-    background-image: linear-gradient(180deg, var(--art-color), #282828);
-    background-position: 0px;
+    background-image: linear-gradient(135deg, var(--art-color), #282828);
+    background-position: 0px, ;
+    background-size: 300px;
     padding: 15px;
     border-radius: 10px;
     text-align: center;
@@ -119,7 +120,7 @@ button:hover {
 
 .music-item:hover {
     transform: scale(1.05);
-    background-position: -300px;
+    background-position: 150px;
 }
 
 .music-item .hifi-tag {
