--- a/static/styles.css
+++ b/static/styles.css
@@ -84,8 +84,8 @@ button:hover {
 .music-item {
     position: relative;
     background-image: linear-gradient(135deg, var(--art-color), #282828);
-    background-position: 0px, ;
-    background-size: 300px;
+    background-position: 100%;
+    background-size: 150%;
     padding: 15px;
     border-radius: 10px;
     text-align: center;
@@ -120,7 +120,7 @@ button:hover {
 
 .music-item:hover {
     transform: scale(1.05);
-    background-position: 150px;
+    background-position: 0%;
 }
 
 .music-item .hifi-tag {
