--- a/static/styles.css
+++ b/static/styles.css
@@ -137,6 +137,7 @@ button:hover {
     background-color: #000;
     padding: 10px;
     width: 100%;
+    transition: transform 0.6s;
 }
 
 #cover-art-container {
@@ -265,4 +266,8 @@ button:hover {
 
 .hidden {
     display: none;
+}
+
+.not-playing {
+    transform: translateY(100%);
 }
