--- a/static/styles.css
+++ b/static/styles.css
@@ -131,6 +131,7 @@ button:hover {
 }
 
 #now-playing {
+    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -140,26 +141,11 @@ button:hover {
     transition: transform 0.6s;
 }
 
-#cover-art-container {
-    position: fixed;
-    bottom: 96px;
-    left: 0px;
-    padding: 30px;
-}
-
-#cover-art {
-    width: 300px;
-    height: 300px;
-
-    box-shadow: 0 0 20px 10px var(--art-color);
-    /* border: 8px solid var(--art-color); */
-}
-
 #track-info {
-    height: 100%;
+    flex: 1;
     text-align: left;
+    display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 5px;
 }
 
@@ -176,8 +162,10 @@ button:hover {
 
 #audio-controls {
     display: flex;
+    justify-content: center;
     align-items: center;
     padding: 10px;
+    flex: 0 0 auto;
 }
 
 #audio-controls button {
@@ -188,20 +176,14 @@ button:hover {
     cursor: pointer;
 }
 
-#audio-controls input[type="range"] {
-    width: 100%;
-}
-
-#audio-controls span {
-    font-size: 12px;
-}
-
 .playtime {
     display: flex;
     align-items: center;
-    margin-right: 10px;
     padding: 10px;
+    flex: 0 0 auto;
+    text-align: right;
 }
+
 
 .slidecontainer {
     display: flex;
@@ -268,6 +250,7 @@ button:hover {
     display: none;
 }
 
+/* TODO: Animate */
 .not-playing {
-    transform: translateY(100%);
+    display: none;
 }
