--- a/static/styles.css
+++ b/static/styles.css
@@ -131,14 +131,26 @@ button:hover {
 }
 
 #now-playing {
-    position: fixed;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
     background-color: #000;
     padding: 10px;
     width: 100%;
     transition: transform 0.6s;
+}
+
+#cover-art-container {
+    position: fixed;
+    bottom: 96px;
+    left: 0px;
+    padding: 30px;
+}
+
+#cover-art {
+    width: 300px;
+    height: 300px;
+
+    box-shadow: 0 0 20px 10px var(--art-color);
+    /* border: 8px solid var(--art-color); */
 }
 
 #track-info {
@@ -183,7 +195,6 @@ button:hover {
     flex: 0 0 auto;
     text-align: right;
 }
-
 
 .slidecontainer {
     display: flex;
