--- a/static/styles.css
+++ b/static/styles.css
@@ -131,7 +131,6 @@ button:hover {
 }
 
 #now-playing {
-    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -157,10 +156,10 @@ button:hover {
 }
 
 #track-info {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+    height: 100%;
     text-align: left;
+    flex-direction: column;
+    align-items: center;
     padding: 5px;
 }
 
@@ -177,10 +176,8 @@ button:hover {
 
 #audio-controls {
     display: flex;
-    justify-content: center;
     align-items: center;
     padding: 10px;
-    flex: 0 0 auto;
 }
 
 #audio-controls button {
@@ -194,9 +191,8 @@ button:hover {
 .playtime {
     display: flex;
     align-items: center;
-    text-align: right;
+    margin-right: 10px;
     padding: 10px;
-    flex: 0 0 auto;
 }
 
 .slidecontainer {
