--- a/static/styles.css
+++ b/static/styles.css
@@ -157,10 +157,12 @@ button:hover {
 
 #track-info {
     height: 100%;
+    position: absolute;
+    left: 10px;
     text-align: left;
     flex-direction: column;
     align-items: center;
-    padding: 5px;
+    padding: 10px;
 }
 
 #track-title {
@@ -175,7 +177,9 @@ button:hover {
 }
 
 #audio-controls {
-    display: flex;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     align-items: center;
     padding: 10px;
 }
@@ -189,7 +193,8 @@ button:hover {
 }
 
 .playtime {
-    display: flex;
+    position: absolute;
+    right: 10px;
     align-items: center;
     margin-right: 10px;
     padding: 10px;
