--- a/static/styles.css
+++ b/static/styles.css
@@ -156,13 +156,13 @@ button:hover {
 }
 
 #track-info {
-    height: 100%;
     position: absolute;
-    left: 10px;
+    right: 10px;
     text-align: left;
+    display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding: 5px;
 }
 
 #track-title {
