--- a/static/styles.css
+++ b/static/styles.css
@@ -157,11 +157,8 @@ button:hover {
 
 #track-info {
     position: absolute;
-    right: 10px;
+    left: 10px;
     text-align: left;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     padding: 5px;
 }
 
@@ -196,7 +193,6 @@ button:hover {
     position: absolute;
     right: 10px;
     align-items: center;
-    margin-right: 10px;
     padding: 10px;
 }
 
