--- a/static/styles.css
+++ b/static/styles.css
@@ -178,21 +178,16 @@ button:hover {
     margin-left: auto;
     margin-right: auto;
     align-items: center;
-    padding: 10px;
-}
-
-#audio-controls button {
-    background: none;
-    color: #fff;
-    font-size: 24px;
-    border: none;
-    cursor: pointer;
+    padding: 0px;
 }
 
 #audio-controls svg {
-    width: 24px;
-    height: 24px;
+    width: 48px;
+    height: 48px;
     fill: #fff;
+    cursor: pointer;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .playtime {
