--- a/static/styles.css
+++ b/static/styles.css
@@ -137,7 +137,10 @@ button:hover {
     background-color: #000;
     padding: 10px;
     width: 100%;
-    transition: transform 0.6s;
+
+    box-shadow: 0 0 20px 10px var(--art-color);
+
+    transition: transform 0.6s, box-shadow 0.6s ease-out;
 }
 
 #cover-art-container {
