--- a/static/styles.css
+++ b/static/styles.css
@@ -147,14 +147,15 @@ button:hover {
     position: fixed;
     bottom: 96px;
     left: 0px;
-    padding: 30px;
+    padding: 0px;
+    z-index: -1;
 }
 
 #cover-art {
     width: 300px;
     height: 300px;
 
-    box-shadow: 0 0 20px 10px var(--art-color);
+    box-shadow: 0 0 40px 20px var(--art-color);
     /* border: 8px solid var(--art-color); */
 
     transition: box-shadow, 0.6s ease-out;
