--- a/static/styles.css
+++ b/static/styles.css
@@ -184,7 +184,7 @@ button:hover {
     margin-left: auto;
     margin-right: auto;
     align-items: center;
-    padding: 0px;
+    padding: 5px 0;
 }
 
 #audio-controls button {
