--- a/static/styles.css
+++ b/static/styles.css
@@ -180,7 +180,7 @@ button:hover {
 }
 
 #audio-controls {
-    display: block;
+    display: inline;
     margin-left: auto;
     margin-right: auto;
     align-items: center;
