--- a/static/styles.css
+++ b/static/styles.css
@@ -299,6 +299,7 @@ main {
     width: 100%;
     height: 8px;
     margin: 0px;
+    background-color: #000;
     background: linear-gradient(to right, var(--art-color) 0%, var(--art-color) var(--value), #000 var(--value), #000 100%);
     outline: none;
     cursor: pointer;
