--- a/static/styles.css
+++ b/static/styles.css
@@ -205,6 +205,7 @@ main {
     font-size: 12px;
     cursor: pointer;
     background-color: #0000;
+    border: none;
     transition: transform 0.2s;
 }
 
