--- a/static/styles.css
+++ b/static/styles.css
@@ -56,6 +56,9 @@ form {
 button {
     background-color: #fff;
     color: #000;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #000;
     cursor: pointer;
 }
 
