--- a/static/styles.css
+++ b/static/styles.css
@@ -60,6 +60,12 @@ button {
     font-size: 16px;
     border: 1px solid #000;
     cursor: pointer;
+    transition: background-color 0.1s;
+}
+
+button:hover {
+    background-color: #000;
+    color: #fff;
 }
 
 .content {
