--- a/static/styles.css
+++ b/static/styles.css
@@ -363,9 +363,15 @@ main {
     height: 24px;
 }
 
+#audio-controls svg.active {
+    fill: var(--art-color);
+}
+
 #audio-controls button:hover {
     transform: scale(1.2);
 }
+
+
 
 .volume {
     position: absolute;
