media session api

--- a/static/styles.css
+++ b/static/styles.css
@@ -357,7 +357,7 @@ main {
     fill: #fff;
     cursor: pointer;
 
-    transition: box-shadow fill 0.6s ease-out;
+    transition: fill, 0.6s ease-out;
 }
 
 #audio-controls .control-button svg {
@@ -367,7 +367,6 @@ main {
 
 #audio-controls button.active svg {
     fill: var(--art-color);
-    box-shadow: 0 0 4px 2px var(--art-color);
 }
 
 #audio-controls button:hover {
