--- a/static/styles.css
+++ b/static/styles.css
@@ -369,6 +369,18 @@ main {
     fill: var(--art-color);
 }
 
+.control-button.active::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: red;
+}
+
 #audio-controls button:hover {
     transform: scale(1.2);
 }
