--- a/static/styles.css
+++ b/static/styles.css
@@ -348,7 +348,6 @@ main {
     padding: 0;
     border: none;
     cursor: pointer;
-    transition: transform 0.4s;
 }
 
 #audio-controls svg {
@@ -369,24 +368,33 @@ main {
     fill: var(--art-color);
 }
 
-#audio-controls button:hover {
-    transform: scale(1.2);
-}
-
 .control-button {
     position: relative;
+}
+
+.control-button.active::before {
+    content: '';
+    position: absolute;
+    top: 120%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: #000;
+    transition: background-color, 0.6s ease-out;
 }
 
 .control-button.active::after {
     content: '';
     position: absolute;
-    top: 50%;
+    top: 120%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 8px;
-    height: 8px;
+    width: 6px;
+    height: 6px;
     border-radius: 50%;
-    background-color: red;
+    background-color: var(--art-color);
 }
 
 .volume {
