--- a/static/styles.css
+++ b/static/styles.css
@@ -372,7 +372,7 @@ main {
     position: relative;
 }
 
-.control-button.active::before {
+.control-button::before {
     content: '';
     position: absolute;
     top: 120%;
