--- a/static/styles.css
+++ b/static/styles.css
@@ -385,15 +385,7 @@ main {
     transition: background-color, 0.6s ease-out;
 }
 
-.control-button.active::after {
-    content: '';
-    position: absolute;
-    top: 120%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
+.control-button.active::before {
     background-color: var(--art-color);
 }
 
