--- a/static/styles.css
+++ b/static/styles.css
@@ -222,7 +222,7 @@ main {
     transform: scale(1.2);
 }
 
-.music-item.is-playing {
+.music-item.playing {
     background-image: none;
     background-color: #000;
     box-shadow: 0 0 40px 20px var(--art-color);
