--- a/static/styles.css
+++ b/static/styles.css
@@ -160,7 +160,7 @@ main {
     align-items: center;
     gap: 15px;
     box-shadow: 0 0 0px 0px var(--art-color);
-    transition: transform 0.4s, background-image 1s, background-position 1s ease-out;
+    transition: transform 0.4s, background-position 1s ease-out, box-shadow 0.6s ease-out;
 }
 
 .music-item img.cover-art {
