--- a/static/styles.css
+++ b/static/styles.css
@@ -159,7 +159,7 @@ main {
     display: flex;
     align-items: center;
     gap: 15px;
-    box-shadow: 0 0 0px 0px var(--art-color);
+    box-shadow: 0 0 40px 20px #0000;
     transition: transform 0.4s, background-position 1s ease-out, box-shadow 0.6s ease-out;
 }
 
