--- a/static/styles.css
+++ b/static/styles.css
@@ -184,11 +184,6 @@ main {
     opacity: 0.7;
 }
 
-.music-item:hover {
-    transform: scale(1.05);
-    background-position: 0%;
-}
-
 .music-item .hifi-tag {
     position: absolute;
     bottom: 5px;
@@ -226,6 +221,11 @@ main {
     background-image: linear-gradient(135deg, #000, #000);
     box-shadow: 0 0 40px 20px var(--art-color);
     transform: scale(1.02);
+}
+
+.music-item:hover {
+    transform: scale(1.05);
+    background-position: 0%;
 }
 
 #search-input {
@@ -304,9 +304,25 @@ main {
     transition: transform 0.6s, box-shadow 0.6s ease-out;
 }
 
-#cover-art-container {
+#data-scroll-container {
     position: fixed;
     bottom: 80px;
+    width: 300px;
+    height: 40px;
+    left: 0px;
+    padding: 0px;
+    z-index: -1;
+}
+
+#data-scroll {
+    width: 300px;
+    height: 40px;
+    font-size: 38px;
+}
+
+#cover-art-container {
+    position: fixed;
+    bottom: 120px;
     width: 300px;
     height: 300px;
     left: 0px;
