--- a/static/styles.css
+++ b/static/styles.css
@@ -311,13 +311,13 @@ main {
     height: 40px;
     left: 0px;
     padding: 0px;
-    z-index: -1;
+    z-index: 1;
 }
 
 #data-scroll {
-    width: 300px;
-    height: 40px;
-    font-size: 38px;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
 }
 
 #cover-art-container {
