--- a/static/styles.css
+++ b/static/styles.css
@@ -310,31 +310,26 @@ main {
     width: 300px;
     height: 40px;
     left: 0px;
-    padding: 0px;
-    z-index: 1;
+    overflow: hidden;
     background-color: #000;
+    color: #fff;
+    white-space: nowrap;
+    font-size: 1.2em;
+    padding: 0px;
 }
 
-/* Animate Constant Scroll */
 #data-scroll {
-    width: 100%;
-    height: 100%;
-    text-align: left;
-    text-overflow: clip;
+    display: inline-block;
     white-space: nowrap;
-    overflow: hidden;
-    color: #fff;
-    font-size: 16px;
-
     animation: scroll 10s linear infinite;
 }
 
 @keyframes scroll {
-    0% {
-        transform: translateX(0%);
+    from {
+        transform: translateX(100%);
     }
 
-    100% {
+    to {
         transform: translateX(-100%);
     }
 }
