--- a/static/styles.css
+++ b/static/styles.css
@@ -318,17 +318,16 @@ main {
     padding: 0px;
 }
 
-#data-scroll span#num1 {
-    position: fixed;
+#data-scroll span {
+    position: absolute;
     display: inline-block;
     white-space: nowrap;
-    overflow: hidden;
     animation: scroll 10s linear infinite;
 }
 
 @keyframes scroll {
     from {
-        transform: translateX(100%);
+        transform: translateX(0%);
     }
 
     to {
